# my_gecko-b2g

./: Cargo.toml  README.txt  a.sh  a_cp.sh  b2g.sh  build-pinephone.sh  build_optdesktop_cp.sh  gdb-b2g.sh
.cargo/: config.in
b2g/: confvars.sh
b2g/app/: b2g.js  moz.build
b2g/chrome/: jar.mn
b2g/components/: B2GAboutRedirector.sys.mjs  OrientationChangeHandler.sys.mjs  PermissionsInstaller.sys.mjs  PermissionsTable.sys.mjs  ProcessGlobal.sys.mjs  ServiceWorkerAssistant.sys.mjs  SettingsPrefsSync.sys.mjs  components.conf  moz.build
b2g/installer/: package-manifest.in
dom/b2g/: B2G.cpp  B2G.h  moz.build
dom/base/: Document.cpp  nsFrameLoader.cpp  nsGlobalWindowInner.cpp  nsINode.cpp  nsMimeTypeArray.cpp  nsMimeTypeArray.h
dom/bindings/: Bindings.conf
dom/cache/: DBSchema.cpp  TypeUtils.cpp
dom/events/: EventListenerManager.cpp  EventNameList.h
dom/filesystem/: RemoveTask.h
dom/html/: HTMLMediaElement.cpp
dom/ipc/: BrowserChild.cpp  BrowserChild.h  BrowserParent.cpp  BrowserParent.h  PBrowser.ipdl
dom/quota/: OriginParser.cpp
dom/security/: nsContentSecurityUtils.cpp
dom/serviceworkers/: ServiceWorkerUtils.cpp
dom/system/: nsDeviceSensors.cpp  nsDeviceSensors.h
dom/webidl/: AddonManager.webidl  B2G.webidl  B2GScreenManager.webidl  Clients.webidl  DevicePickupEvent.webidl  Window.webidl  (+2 more)
hal/: HalSensor.h  moz.build
hal/linux/b2g/b2glinuxhal/: Cargo.toml
hal/linux/b2g/b2glinuxhal/src/: lib.rs
supply-chain/: config.toml
toolkit/: moz.configure
widget/: EventMessageList.h  ScreenManager.cpp  ScreenManager.h  nsBaseWidget.cpp
(+121 files in other folders)
